@@ -1,5 +1,10 @@
 2008-05-06  Sam Steingold  <sds@gnu.org>
 
+	* modules/syscalls/calls.c (FFLUSH): add
+	(FILENO, FEOF, FERROR, FCLOSE): check return values
+
+2008-05-06  Sam Steingold  <sds@gnu.org>
+
 	* clos-class3.lisp, clos-genfun3.lisp, clos-methcomb2.lisp,
 	* describe.lisp, foreign1.lisp, reploop.lisp:
 	various small i18n message fixes
